# airtables-projects

./: LICENSE  README.md  airtables-projects.cabal  airtables.cabal  stack.yaml
app/: Main.hs
src/: Lib.hs
