name:                airtables
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/airtables#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable airtables-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base >= 4.7 && < 5
                     , airtable-api >= 0.1 && < 1
                     , aeson >= 1.1 && < 2
                     , text >= 1.2 && < 2
                     , unordered-containers >= 0.2.7 && < 0.3
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/airtables
